[package]
name = "connectr"
version = "0.0.3"
authors = [ "Trevor Bentley <trevor@trevorbentley.com>" ]

description = "Spotify Connect library and systray/menubar application for controlling Spotify devices."
keywords = ["spotify", "connect", "webapi", "systray", "menubar"]
categories = ["api-bindings"]
homepage = "https://github.com/mrmekon/connectr"
repository = "https://github.com/mrmekon/connectr"
license = "Apache-2.0"

build = "build.rs"

[lib]
name = "connectr"
crate-type = ["rlib", "dylib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[features]
verbose_http = []
mac_white_icon = []

[dependencies]
curl = "0.4.6"
open = "1.2.0"
regex = "0.2"
serde = "1.0.5"
serde_json = "1.0.2"
serde_derive = "1.0.5"
url = "1.4.0"
rust-ini = "0.9"
time = "0.1"
timer = "0.1.6"
chrono = "0.3.0"
libc = "0.2"
log = "0.3.7"
log4rs = "0.6.3"
ctrlc = "3.0.1"

[target."cfg(windows)".dependencies]
#systray = "0.1.1"
#systray = {git = "https://github.com/mrmekon/systray-rs.git"}
systray = {path = "deps/systray-rs", version="0.1.1-connectr"}

[target."cfg(windows)".dependencies.rubrail]
#version = "0.3"
path = "deps/rubrail-rs"
version="0.3.1-rc"
default-features=false

[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies]

[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies.rubrail]
#version = "0.3"
path = "deps/rubrail-rs"
version = "0.3.1-rc"
default-features = false

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.8.1"
objc-foundation = "0.1.1"
objc_id = "0.1"
#rubrail = "0.3"
rubrail = {path = "deps/rubrail-rs", version="0.3.1-rc"}

[target."cfg(target_os = \"macos\")".dependencies.objc]
version = "0.2.2"
features = ["exception"]

[dev-dependencies]
#hyper = {git = "https://github.com/hyperium/hyper"}
hyper = {path = "deps/hyper", version="0.11.0-a.0"}
futures = "0.1.11"
lazy_static = "0.2"
