[package]
name = "connectr"
version = "1.0.2-rc"
authors = [ "Trevor Bentley <mrmekon@gmail.com>" ]
description = "A super lightweight Spotify controller."
keywords = ["spotify", "connect", "webapi", "systray", "menubar"]
categories = ["api-bindings", "multimedia::audio"]
homepage = "https://github.com/mrmekon/connectr"
repository = "https://github.com/mrmekon/connectr"
documentation = "https://mrmekon.github.io/connectr/connectr/"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "connectr"
# "dylib" disabled for Windows: https://github.com/rust-lang/rust/issues/53014
crate-type = ["rlib"]

[[bin]]
name = "connectr"
doc = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[features]
verbose_http = []
mac_white_icon = []
scrobble = ["rustfm-scrobble"]
default = ["scrobble"]

[dependencies]
curl = "0.4.11"
open = "1.2.1"
serde = "1.0.37"
serde_json = "1.0.13"
serde_derive = "1.0"
rust-ini = "0.13"
time = "0.1"
timer = "0.2"
chrono = "0.4"
log = "0.4"
ctrlc = "3.1"
dirs = "2.0"
percent-encoding = "1.0.1"
rustfm-scrobble = {version="0.9.2", optional = true, path = "deps/rustfm-scrobble/"}

[dependencies.fruitbasket]
version = "0.8"
features = ["logging"]

[target."cfg(windows)".dependencies]
#systray = "0.1.1"
#systray = {git = "https://github.com/mrmekon/systray-rs.git"}
systray = {path = "deps/systray-rs", version="0.1.1-connectr"}

[target."cfg(windows)".dependencies.rubrail]
default-features=false
version = "0.9"

[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies]

[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies.rubrail]
default-features = false
version = "0.9"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.18"
objc-foundation = "0.1"
objc_id = "0.1"

[target."cfg(target_os = \"macos\")".dependencies.rubrail]
version = "0.9"

[target."cfg(target_os = \"macos\")".dependencies.objc]
version = "0.2"
features = ["exception"]

[dev-dependencies]
hyper = "0.11"
futures = "0.1.11"
lazy_static = "1.0"

[package.metadata.release]
sign-commit = false
upload-doc = true
pre-release-commit-message = "Release {{version}}"
dev-version-ext = "rc"
tag-message = "Release {{version}}"
doc-commit-message = "Release {{version}}"
